--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
             android:label="@string/title_activity_quiz"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
+            android:name=".KanjiQuiz.KanjiQuizActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
